[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/import_files_button.gd" type="Script" id=1]
[ext_resource path="res://scripts/import_files_dialog.gd" type="Script" id=2]
[ext_resource path="res://scenes/month-heatmap-ui.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/file_list.gd" type="Script" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ImportFilesButton" type="Button" parent="MainPanel"]
margin_left = 54.8201
margin_top = 27.8561
margin_right = 144.82
margin_bottom = 47.8561
text = "Import Files"
script = ExtResource( 1 )

[node name="ImportFilesDialog" type="FileDialog" parent="MainPanel"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -454.0
margin_top = -197.0
margin_right = 454.0
margin_bottom = 196.0
window_title = "Open File(s)"
dialog_text = "choose the files to add"
mode = 1
access = 2
filters = PoolStringArray( "*.org" )
current_dir = "/home/vanzypher/PROJECTS/Programming/org-mode-analytics"
current_path = "/home/vanzypher/PROJECTS/Programming/org-mode-analytics/"
script = ExtResource( 2 )

[node name="ItemList" type="ItemList" parent="MainPanel"]
margin_left = 17.0
margin_top = 64.0
margin_right = 181.0
margin_bottom = 584.0
same_column_width = true

[node name="HeatMap" type="Control" parent="MainPanel"]
editor/display_folded = true
margin_left = 195.0
margin_top = 416.0
margin_right = 1005.0
margin_bottom = 585.0

[node name="Background" type="ColorRect" parent="MainPanel/HeatMap"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 38.0
margin_right = -11.0
margin_bottom = -15.0
color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="Year" type="GridContainer" parent="MainPanel/HeatMap/Background"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 9
custom_constants/hseparation = 31
columns = 12

[node name="Jan" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_right = 36.0
margin_bottom = 14.0
text = "Jan"

[node name="Feb" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_left = 67.0
margin_right = 103.0
margin_bottom = 14.0
text = "Jan"

[node name="Mar" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_left = 134.0
margin_right = 170.0
margin_bottom = 14.0
text = "Jan"

[node name="Apr" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_left = 201.0
margin_right = 237.0
margin_bottom = 14.0
text = "Jan"

[node name="May" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_left = 268.0
margin_right = 304.0
margin_bottom = 14.0
text = "Jan"

[node name="Jun" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_left = 335.0
margin_right = 371.0
margin_bottom = 14.0
text = "Jan"

[node name="Jul" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_left = 402.0
margin_right = 438.0
margin_bottom = 14.0
text = "Jan"

[node name="Aug" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_left = 469.0
margin_right = 505.0
margin_bottom = 14.0
text = "Jan"

[node name="Sep" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_left = 536.0
margin_right = 572.0
margin_bottom = 14.0
text = "Jan"

[node name="Oct" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_left = 603.0
margin_right = 639.0
margin_bottom = 14.0
text = "Jan"

[node name="Nov" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_left = 670.0
margin_right = 706.0
margin_bottom = 14.0
text = "Jan"

[node name="Dec" type="Label" parent="MainPanel/HeatMap/Background/Year"]
margin_left = 737.0
margin_right = 773.0
margin_bottom = 14.0
text = "Jan"

[node name="Month1" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_top = 23.0
margin_right = 36.0
margin_bottom = 95.0

[node name="Month2" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_left = 67.0
margin_top = 23.0
margin_right = 103.0
margin_bottom = 95.0

[node name="Month3" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_left = 134.0
margin_top = 23.0
margin_right = 170.0
margin_bottom = 95.0

[node name="Month4" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_left = 201.0
margin_top = 23.0
margin_right = 237.0
margin_bottom = 95.0

[node name="Month5" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_left = 268.0
margin_top = 23.0
margin_right = 304.0
margin_bottom = 95.0

[node name="Month6" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_left = 335.0
margin_top = 23.0
margin_right = 371.0
margin_bottom = 95.0

[node name="Month7" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_left = 402.0
margin_top = 23.0
margin_right = 438.0
margin_bottom = 95.0

[node name="Month8" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_left = 469.0
margin_top = 23.0
margin_right = 505.0
margin_bottom = 95.0

[node name="Month9" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_left = 536.0
margin_top = 23.0
margin_right = 572.0
margin_bottom = 95.0

[node name="Month10" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_left = 603.0
margin_top = 23.0
margin_right = 639.0
margin_bottom = 95.0

[node name="Month11" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_left = 670.0
margin_top = 23.0
margin_right = 706.0
margin_bottom = 95.0

[node name="Month12" parent="MainPanel/HeatMap/Background/Year" instance=ExtResource( 3 )]
margin_left = 737.0
margin_top = 23.0
margin_right = 773.0
margin_bottom = 95.0

[node name="HeatMapTitleLabel" type="Label" parent="MainPanel/HeatMap"]
margin_left = 16.5476
margin_top = 15.1429
margin_right = 800.548
margin_bottom = 29.1429
text = "heat map"

[node name="FileList" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="pressed" from="MainPanel/ImportFilesButton" to="MainPanel/ImportFilesButton" method="_on_ImportFilesButton_pressed"]
[connection signal="file_added" from="MainPanel/ImportFilesDialog" to="FileList" method="_on_ImportFilesDialog_file_added"]
[connection signal="file_selected" from="MainPanel/ImportFilesDialog" to="MainPanel/ImportFilesDialog" method="_on_ImportFilesDialog_file_selected"]
[connection signal="files_selected" from="MainPanel/ImportFilesDialog" to="MainPanel/ImportFilesDialog" method="_on_ImportFilesDialog_files_selected"]
